--- a/client/src/pages/Settings/pages/Identities/components/IdentityDialog/styles.sass
+++ b/client/src/pages/Settings/pages/Identities/components/IdentityDialog/styles.sass
@@ -36,6 +36,11 @@
         font-weight: 600
         font-size: 0.9rem
 
+      .field-hint
+        color: colors.$subtext
+        font-size: 0.8rem
+        margin-top: -0.1rem
+
     .form-row
       display: grid
       grid-template-columns: 1fr 1fr
